// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`File Input renders a file input with custom label 1`] = `
Array [
  .c0 {
  display: block;
  font-size: 1rem;
  color: #8697A2;
  margin-bottom: 0.5rem;
}

<span
    className="c0"
    id="fileInput3-label"
  >
    ID, passport, etc.
  </span>,
  .c0 {
  width: 100%;
  max-width: 100%;
  padding: 0.5625rem 0.9375rem;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  font: inherit;
  font-size: 1rem;
  line-height: 1.5rem;
  color: #FFFFFF;
  background-color: #1A212A;
  border: 1px solid #31373F;
  border-radius: 4px;
  -webkit-transition: border-color 0.2s ease;
  transition: border-color 0.2s ease;
  -webkit-appearance: none;
  padding-right: 3.125rem;
  background-position: right 0.9375rem center;
  background-repeat: no-repeat;
  background-size: 1.25rem;
  width: auto;
  position: relative;
  display: block;
  color: #8697A2;
  cursor: pointer;
  background-image: url('data:image/svg+xml;utf8, %3Csvg%20width%3D%221em%22%20height%3D%221em%22%20viewBox%3D%220%200%2020%2018%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20color%3D%22%238697A2%22%20class%3D%22IconUpload-sc-2chell-0%20lfQEYC%22%3E%3Cpath%20d%3D%22M10.902%2018H9.098V8.423l-2.78%202.69L5%209.838%2010%205l5%204.838-1.318%201.275-2.78-2.69V18zM1.81%201.861V6H0V0h20v6h-1.84V1.861H1.81z%22%20fill%3D%22currentColor%22%20fill-rule%3D%22nonzero%22%3E%3C%2Fpath%3E%3C%2Fsvg%3E');
}

.c0::-webkit-input-placeholder {
  color: #8697A2;
  opacity: 1;
}

.c0::-moz-placeholder {
  color: #8697A2;
  opacity: 1;
}

.c0:-ms-input-placeholder {
  color: #8697A2;
  opacity: 1;
}

.c0::placeholder {
  color: #8697A2;
  opacity: 1;
}

.c0:hover:not(:focus):not([disabled]) {
  border-color: #4C5159;
}

.c0:not(:placeholder-shown):not([type="date"]):invalid {
  border-color: #FF4E64;
}

.c0:invalid,
.c0:-moz-ui-invalid {
  box-shadow: none;
}

.c0:disabled {
  opacity: 0.5;
  cursor: not-allowed;
}

.c0:focus-within {
  border-color: #8697A2;
}

.c1 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  -webkit-clip-path: inset(50%);
  clip-path: inset(50%);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

<label
    className="-label c0"
  >
    <span>
      Choose file…
    </span>
    <input
      aria-describedby="fileInput3-label"
      className="c1"
      id="fileInput3"
      type="file"
    />
  </label>,
]
`;

exports[`File Input renders a file input with custom label and placeholder 1`] = `
Array [
  .c0 {
  display: block;
  font-size: 1rem;
  color: #8697A2;
  margin-bottom: 0.5rem;
}

<span
    className="c0"
    id="fileInput4-label"
  >
    Upload photo
  </span>,
  .c0 {
  width: 100%;
  max-width: 100%;
  padding: 0.5625rem 0.9375rem;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  font: inherit;
  font-size: 1rem;
  line-height: 1.5rem;
  color: #FFFFFF;
  background-color: #1A212A;
  border: 1px solid #31373F;
  border-radius: 4px;
  -webkit-transition: border-color 0.2s ease;
  transition: border-color 0.2s ease;
  -webkit-appearance: none;
  padding-right: 3.125rem;
  background-position: right 0.9375rem center;
  background-repeat: no-repeat;
  background-size: 1.25rem;
  width: auto;
  position: relative;
  display: block;
  color: #8697A2;
  cursor: pointer;
  background-image: url('data:image/svg+xml;utf8, %3Csvg%20width%3D%221em%22%20height%3D%221em%22%20viewBox%3D%220%200%2020%2018%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20color%3D%22%238697A2%22%20class%3D%22IconUpload-sc-2chell-0%20lfQEYC%22%3E%3Cpath%20d%3D%22M10.902%2018H9.098V8.423l-2.78%202.69L5%209.838%2010%205l5%204.838-1.318%201.275-2.78-2.69V18zM1.81%201.861V6H0V0h20v6h-1.84V1.861H1.81z%22%20fill%3D%22currentColor%22%20fill-rule%3D%22nonzero%22%3E%3C%2Fpath%3E%3C%2Fsvg%3E');
}

.c0::-webkit-input-placeholder {
  color: #8697A2;
  opacity: 1;
}

.c0::-moz-placeholder {
  color: #8697A2;
  opacity: 1;
}

.c0:-ms-input-placeholder {
  color: #8697A2;
  opacity: 1;
}

.c0::placeholder {
  color: #8697A2;
  opacity: 1;
}

.c0:hover:not(:focus):not([disabled]) {
  border-color: #4C5159;
}

.c0:not(:placeholder-shown):not([type="date"]):invalid {
  border-color: #FF4E64;
}

.c0:invalid,
.c0:-moz-ui-invalid {
  box-shadow: none;
}

.c0:disabled {
  opacity: 0.5;
  cursor: not-allowed;
}

.c0:focus-within {
  border-color: #8697A2;
}

.c1 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  -webkit-clip-path: inset(50%);
  clip-path: inset(50%);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

<label
    className="-label c0"
  >
    <span>
      ID, passport, etc.
    </span>
    <input
      aria-describedby="fileInput4-label"
      className="c1"
      id="fileInput4"
      type="file"
    />
  </label>,
]
`;

exports[`File Input renders a file input with custom placeholder 1`] = `
Array [
  .c0 {
  display: block;
  font-size: 1rem;
  color: #8697A2;
  margin-bottom: 0.5rem;
}

<span
    className="c0"
    id="fileInput2-label"
  />,
  .c0 {
  width: 100%;
  max-width: 100%;
  padding: 0.5625rem 0.9375rem;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  font: inherit;
  font-size: 1rem;
  line-height: 1.5rem;
  color: #FFFFFF;
  background-color: #1A212A;
  border: 1px solid #31373F;
  border-radius: 4px;
  -webkit-transition: border-color 0.2s ease;
  transition: border-color 0.2s ease;
  -webkit-appearance: none;
  padding-right: 3.125rem;
  background-position: right 0.9375rem center;
  background-repeat: no-repeat;
  background-size: 1.25rem;
  width: auto;
  position: relative;
  display: block;
  color: #8697A2;
  cursor: pointer;
  background-image: url('data:image/svg+xml;utf8, %3Csvg%20width%3D%221em%22%20height%3D%221em%22%20viewBox%3D%220%200%2020%2018%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20color%3D%22%238697A2%22%20class%3D%22IconUpload-sc-2chell-0%20lfQEYC%22%3E%3Cpath%20d%3D%22M10.902%2018H9.098V8.423l-2.78%202.69L5%209.838%2010%205l5%204.838-1.318%201.275-2.78-2.69V18zM1.81%201.861V6H0V0h20v6h-1.84V1.861H1.81z%22%20fill%3D%22currentColor%22%20fill-rule%3D%22nonzero%22%3E%3C%2Fpath%3E%3C%2Fsvg%3E');
}

.c0::-webkit-input-placeholder {
  color: #8697A2;
  opacity: 1;
}

.c0::-moz-placeholder {
  color: #8697A2;
  opacity: 1;
}

.c0:-ms-input-placeholder {
  color: #8697A2;
  opacity: 1;
}

.c0::placeholder {
  color: #8697A2;
  opacity: 1;
}

.c0:hover:not(:focus):not([disabled]) {
  border-color: #4C5159;
}

.c0:not(:placeholder-shown):not([type="date"]):invalid {
  border-color: #FF4E64;
}

.c0:invalid,
.c0:-moz-ui-invalid {
  box-shadow: none;
}

.c0:disabled {
  opacity: 0.5;
  cursor: not-allowed;
}

.c0:focus-within {
  border-color: #8697A2;
}

.c1 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  -webkit-clip-path: inset(50%);
  clip-path: inset(50%);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

<label
    className="-label c0"
  >
    <span>
      Choose a photo…
    </span>
    <input
      aria-describedby="fileInput2-label"
      className="c1"
      id="fileInput2"
      type="file"
    />
  </label>,
]
`;

exports[`File Input renders a file input with default placeholder 1`] = `
Array [
  .c0 {
  display: block;
  font-size: 1rem;
  color: #8697A2;
  margin-bottom: 0.5rem;
}

<span
    className="c0"
    id="fileInput1-label"
  />,
  .c0 {
  width: 100%;
  max-width: 100%;
  padding: 0.5625rem 0.9375rem;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  font: inherit;
  font-size: 1rem;
  line-height: 1.5rem;
  color: #FFFFFF;
  background-color: #1A212A;
  border: 1px solid #31373F;
  border-radius: 4px;
  -webkit-transition: border-color 0.2s ease;
  transition: border-color 0.2s ease;
  -webkit-appearance: none;
  padding-right: 3.125rem;
  background-position: right 0.9375rem center;
  background-repeat: no-repeat;
  background-size: 1.25rem;
  width: auto;
  position: relative;
  display: block;
  color: #8697A2;
  cursor: pointer;
  background-image: url('data:image/svg+xml;utf8, %3Csvg%20width%3D%221em%22%20height%3D%221em%22%20viewBox%3D%220%200%2020%2018%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20color%3D%22%238697A2%22%20class%3D%22IconUpload-sc-2chell-0%20lfQEYC%22%3E%3Cpath%20d%3D%22M10.902%2018H9.098V8.423l-2.78%202.69L5%209.838%2010%205l5%204.838-1.318%201.275-2.78-2.69V18zM1.81%201.861V6H0V0h20v6h-1.84V1.861H1.81z%22%20fill%3D%22currentColor%22%20fill-rule%3D%22nonzero%22%3E%3C%2Fpath%3E%3C%2Fsvg%3E');
}

.c0::-webkit-input-placeholder {
  color: #8697A2;
  opacity: 1;
}

.c0::-moz-placeholder {
  color: #8697A2;
  opacity: 1;
}

.c0:-ms-input-placeholder {
  color: #8697A2;
  opacity: 1;
}

.c0::placeholder {
  color: #8697A2;
  opacity: 1;
}

.c0:hover:not(:focus):not([disabled]) {
  border-color: #4C5159;
}

.c0:not(:placeholder-shown):not([type="date"]):invalid {
  border-color: #FF4E64;
}

.c0:invalid,
.c0:-moz-ui-invalid {
  box-shadow: none;
}

.c0:disabled {
  opacity: 0.5;
  cursor: not-allowed;
}

.c0:focus-within {
  border-color: #8697A2;
}

.c1 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  -webkit-clip-path: inset(50%);
  clip-path: inset(50%);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

<label
    className="-label c0"
  >
    <span>
      Choose file…
    </span>
    <input
      aria-describedby="fileInput1-label"
      className="c1"
      id="fileInput1"
      type="file"
    />
  </label>,
]
`;

exports[`File Input renders as error 1`] = `
Array [
  .c0 {
  display: block;
  font-size: 1rem;
  color: #8697A2;
  margin-bottom: 0.5rem;
}

<span
    className="c0"
    id="fileInput5-label"
  />,
  .c0 {
  width: 100%;
  max-width: 100%;
  padding: 0.5625rem 0.9375rem;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  font: inherit;
  font-size: 1rem;
  line-height: 1.5rem;
  color: #FFFFFF;
  background-color: #1A212A;
  border: 1px solid #31373F;
  border-radius: 4px;
  -webkit-transition: border-color 0.2s ease;
  transition: border-color 0.2s ease;
  -webkit-appearance: none;
  padding-right: 3.125rem;
  background-position: right 0.9375rem center;
  background-repeat: no-repeat;
  background-size: 1.25rem;
  border-color: #FF4E64;
  width: auto;
  position: relative;
  display: block;
  color: #8697A2;
  cursor: pointer;
  background-image: url('data:image/svg+xml;utf8, %3Csvg%20width%3D%221em%22%20height%3D%221em%22%20viewBox%3D%220%200%2020%2018%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20color%3D%22%238697A2%22%20class%3D%22IconUpload-sc-2chell-0%20lfQEYC%22%3E%3Cpath%20d%3D%22M10.902%2018H9.098V8.423l-2.78%202.69L5%209.838%2010%205l5%204.838-1.318%201.275-2.78-2.69V18zM1.81%201.861V6H0V0h20v6h-1.84V1.861H1.81z%22%20fill%3D%22currentColor%22%20fill-rule%3D%22nonzero%22%3E%3C%2Fpath%3E%3C%2Fsvg%3E');
  border-color: #FF4E64;
}

.c0::-webkit-input-placeholder {
  color: #8697A2;
  opacity: 1;
}

.c0::-moz-placeholder {
  color: #8697A2;
  opacity: 1;
}

.c0:-ms-input-placeholder {
  color: #8697A2;
  opacity: 1;
}

.c0::placeholder {
  color: #8697A2;
  opacity: 1;
}

.c0:hover:not(:focus):not([disabled]) {
  border-color: #4C5159;
}

.c0:not(:placeholder-shown):not([type="date"]):invalid {
  border-color: #FF4E64;
}

.c0:invalid,
.c0:-moz-ui-invalid {
  box-shadow: none;
}

.c0:disabled {
  opacity: 0.5;
  cursor: not-allowed;
}

.c0:focus-within {
  border-color: #8697A2;
}

.c1 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  -webkit-clip-path: inset(50%);
  clip-path: inset(50%);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

<label
    className="-label c0"
  >
    <span>
      Choose file…
    </span>
    <input
      aria-describedby="fileInput5-label"
      className="c1"
      id="fileInput5"
      type="file"
    />
  </label>,
]
`;
